syntax = "proto3";
option optimize_for = SPEED; // 加快解析
option java_package = "com.netty.proto";  // 指定生成到哪个包下
option java_outer_classname = "Message"; // 外部类名

message Option{

  enum OptionType{
    REGISTER = 0; // 注册账号
    ROLE = 1; //创建角色
    LOGIN = 2; // 玩家登录
    CHANGE_MAP = 3; // 切图
    STATE = 4; // 查看当前场景中所有实体的状态
    RESPONSE = 5; // 返回数据
  }

  OptionType option_type = 1;

  oneof optionContent{
      Register register = 2;
      CreateRole creatRole = 3;
      Login login = 4;
      ChangeMap changeMap = 5;
      State state = 6;
      Response response = 7;
  }

}

// 注册
message Register{
  string account = 1; // 账号
  string nickName = 2; // 昵称
}

// 创建角色
message CreateRole{
  int32 roleType = 1; // 角色类型：英雄、村民、怪物
}

// 登录
message Login{
  string account = 1; // 账号
}

// 切图
message ChangeMap{
  int32 mapId = 1; // 切向的地图ID
}

// 查看当前场景中所有实体的状态
message State{
}

// 返回给客户端的消息
message Response{
  string answer = 1;
}
